--- a/praca_inzynierska/requirements.txt
+++ b/praca_inzynierska/requirements.txt
@@ -1,12 +1,6 @@
-blinker==1.9.0
-click==8.1.7
-colorama==0.4.6
-Flask==3.0.3
-itsdangerous==2.2.0
-Jinja2==3.1.4
-MarkupSafe==3.0.2
+Flask~=3.1.0
 numpy==2.1.3
 opencv-python==4.10.0.84
-pip==24.3.1
-Werkzeug==3.1.3
 pyzbar==0.1.9
+python-snap7~=2.0.2
+pymodbus~=3.7.4
