Dodanie możliwości zmiany typu komunikacji poprzez strone www. [fix]

--- a/praca_inzynierska/configs/config.json
+++ b/praca_inzynierska/configs/config.json
@@ -1,1 +1,1 @@
-{"global_detection_mode": 0, "global_grayscale_mode": 0, "global_debug_mode": 0, "global_margin": 10}
+{"global_detection_mode": 0, "global_grayscale_mode": 0, "global_debug_mode": 0, "global_margin": 10, "comm_mode": 0}
