--- a/praca_inzynierska/configs/config.json
+++ b/praca_inzynierska/configs/config.json
@@ -1,1 +1,1 @@
-{"global_detection_mode": 1, "global_grayscale_mode": 0, "global_debug_mode": 0, "global_margin": 10, "comm_mode": 0, "focus": 45}
+{"global_detection_mode": 0, "global_grayscale_mode": 0, "global_debug_mode": 0, "global_margin": 10, "comm_mode": 0, "focus": 0, "masking": "on"}
